@@ -13,6 +13,9 @@ $Id$
 	  Loop detection stuff should work and has been tested, but I'm
 	  not completely sure I did this right ... so odd behavior should
 	  be reported.
+	New 'away' command, just an alias to zaway for now.
+	'A' key now bound to 'away' command.
+	In status bar "ZAWAY" is now "AWAY"
  	
 2.1.1-pre-1
 	Only print forced AIM logout message once.
